<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.victorhugo.hungry4pizza.MainActivity">

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        tools:text="Olá, fulano" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEscolhaPizza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbBacon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txtBacon" />

        <CheckBox
            android:id="@+id/cbChampignon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txtChampignon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbAtum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txtAtum" />

        <CheckBox
            android:id="@+id/cbChocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txtChocolate" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTamanhoPizza" />

    <RadioGroup
        android:id="@+id/rgTamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBroto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbBroto" />

        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbNormal" />

        <RadioButton
            android:id="@+id/rbFamilia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbFamilia" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFormaPagamento" />

    <Spinner
        android:id="@+id/spPagamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/pagamentos" />

    <Button
        android:id="@+id/btFecharPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btFecharPedido" />
</LinearLayout>
